[package]
name = "clip"
version = "0.1.0"
description = "A simple, cross-platform CLI clipboard tool."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/clip"
keywords = ["cli", "clipboard", "cross-platform"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[dependencies]
atty = "0.2"
copypasta = "0.7"
copypasta-ext = "0.3"
which = "4.0"
